[project]
name = "aegra"
version = "0.1.0"
description = "Aegra - Self-hosted Agent Protocol server (meta-package)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Muhammad Ibrahim", email = "mibrahim37612@gmail.com" }]
keywords = ["langgraph", "agents", "llm", "fastapi", "agent-protocol", "self-hosted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "aegra-cli>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ibbybuilds/aegra"
Documentation = "https://github.com/ibbybuilds/aegra#readme"
Repository = "https://github.com/ibbybuilds/aegra"
Issues = "https://github.com/ibbybuilds/aegra/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
